datasource db {
  url      = env("DATABASE_URL")
  provider = "postgres"
}

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model User {
  id                  Int        @id @default(autoincrement())
  name                String?
  email               String     @unique
  password            String
  salt                String
  accessTokens        OAuthAccessToken[]
  authorizationCodes  OAuthAuthorizationCode[]
  budgets             Budget[]
  createdAt           DateTime   @default(now())
  updatedAt           DateTime   @updatedAt
}

model Payee {
  id                  Int         @id @default(autoincrement())
  name                String
  transactions        Transaction[]
  createdAt           DateTime    @default(now())
  updatedAt           DateTime    @updatedAt
}

model Budget {
  id                  Int         @id @default(autoincrement())
  name                String
  user                User        @relation(fields: [userId], references: [id])
  userId              Int
  categories          Category[]
  createdAt           DateTime    @default(now())
  updatedAt           DateTime    @updatedAt
}

model BudgetAction {
  id                  Int         @id @default(autoincrement())
  date                DateTime
  amount              Float
  movedFrom           Category    @relation("from", fields: [movedFromId], references: [id])
  movedTo             Category    @relation("to", fields: [movedToId], references: [id])
  movedFromId         Int
  movedToId           Int
  createdAt           DateTime    @default(now())
  updatedAt           DateTime    @updatedAt
}

model Category {
  id                  Int            @id @default(autoincrement())
  name                String
  budget              Budget         @relation(fields: [budgetId], references: [id])
  group               CategoryGroup? @relation(fields: [groupId], references: [id])
  budgetId            Int
  groupId             Int?
  hidden              Boolean
  transactions        Transaction[]
  budgetTaken         BudgetAction[] @relation("from")
  budgetAdded         BudgetAction[] @relation("to")
  createdAt           DateTime       @default(now())
  updatedAt           DateTime       @updatedAt
}

model CategoryGroup {
  id                  Int         @id @default(autoincrement())
  name                String
  categories          Category[]
  createdAt           DateTime    @default(now())
  updatedAt           DateTime    @updatedAt
}

enum AccountGroup {
  BUDGET
  TRACKING
}

enum AccountType {
  CHECKING
  SAVINGS
  CASH
  CREDIT
  ASSET
  LIABILITY
}

model Account {
  id                  Int           @id @default(autoincrement())
  name                String
  group               AccountGroup  @default(BUDGET)
  type                AccountType   @default(CHECKING)
  startingBalance     Float
  transactions        Transaction[] @relation("transaction")
  transfers           Transaction[] @relation("transfer")
  createdAt           DateTime      @default(now())
  updatedAt           DateTime      @updatedAt
}

model Transaction {
  id                  Int        @id @default(autoincrement())
  date                DateTime
  account             Account    @relation("transaction", fields: [accountId], references: [id])
  payee               Payee?     @relation(fields: [payeeId], references: [id])
  category            Category?  @relation(fields: [categoryId], references: [id])
  accountFrom         Account?   @relation("transfer", fields: [accountFromId], references: [id])
  accountId           Int
  accountFromId       Int?
  payeeId             Int?
  categoryId          Int?
  amount              Float
  cleared             Boolean
  reconciled          Boolean
  note                String?
  createdAt           DateTime   @default(now())
  updatedAt           DateTime   @updatedAt
}

model OAuthClient {
  id                   Int         @id @default(autoincrement())
  clientId             String      @unique
  clientSecret         String?
  redirectUris         String[]
  grants               String[]
  accessTokenLifetime  Int?
  refreshTokenLifetime Int?
  accessTokens         OAuthAccessToken[]
  authorizationCodes   OAuthAuthorizationCode[]
  createdAt            DateTime    @default(now())
  updatedAt            DateTime    @updatedAt
}

model OAuthAuthorizationCode {
  id                Int         @id @default(autoincrement())
  authorizationCode String
  expiresAt         DateTime
  redirectUri       String
  scope             String[]
  client            OAuthClient @relation(fields: [clientId], references: [id])
  user              User        @relation(fields: [userId], references: [id])
  clientId          Int
  userId            Int
  createdAt         DateTime    @default(now())
  updatedAt         DateTime    @updatedAt
}

model OAuthAccessToken {
  id                    Int         @id @default(autoincrement())
  accessToken           String
  accessTokenExpiresAt  DateTime?
  refreshToken          String?
  refreshTokenExpiresAt DateTime?
  scope                 String[]
  client                OAuthClient @relation(fields: [clientId], references: [id])
  clientId              Int
  user                  User?       @relation(fields: [userId], references: [id])
  userId                Int?
  createdAt             DateTime    @default(now())
  updatedAt             DateTime    @updatedAt
}
